--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,40 @@
 /*  your css code here. If applicable */
+.header{
+	background-color: #011e29;
+	text-align: center;
+	color: white;
+	padding: 10px;
+	font-family: arial;
+}
+.body{
+	background-color: #f5f5f5;
+	display: flex;
+	margin-top: 20px;
+	height: 100vh;
+	justify-content: space-around;
+}
+img{
+	width: 80px;
+}
+.latest-news-section{
+	background-color: white;
+	padding: 10px;
+	width: 33vw;
+	height: 30vh;
+	border-radius: 20px;
+	text-align: center;
+}
+.pictorial-news-section{
+	background-color: white;
+	padding: 10px;
+	width: 33%;
+	height: 50%;
+	text-align: center;
+	border-radius: 20px;
+}
+.main-article{
+background-color: white;
+height: 30vh;
+	border-radius: 20px;
+text-align: center;
+}
